FIX: Mini basket not being displayed on mobile screen sizes. FIX: Header doesn't jump to multiple lines on mobile screen sizes. FIX: Personalization banner text overlapped other text on mobile screen sizes.

--- a/CMS/AvenueClothing/Css/uCommerce.demostore.css
+++ b/CMS/AvenueClothing/Css/uCommerce.demostore.css
@@ -677,4 +677,26 @@ input[type=text], input[type=email] {
         width: 100%;
         margin-left: 0;
     }
+
+    a.brand.span3 {
+        display: none;
+    }
+
+    .banner-image p, .banner-image h2 {
+        width: 50%;
+    }
+}
+
+@media (max-width: 642px) {
+    .banner-image h2 {
+        top: 0;
+    }
+
+    .banner-image p {
+        top: 45px;
+    }
+
+    .banner-image img {
+        min-height: 185px;
+    }
 }
